id/email+password -> jwt
